cabal-version: 3.0

name:           blueripple-data-overlaps
version:        0.1.0.0
synopsis:       data-overlaps utilities with Frames types and loaders for them
category:       Data
homepage:       https://github.com/blueripple/data-overlaps#readme
bug-reports:    https://github.com/blueripple/data-overlaps/issues
author:         Adam Conner-Sax
maintainer:     adam@blueripplepolitics.org
copyright:      2024 Adam Conner-Sax
license:        BSD-3-Clause
build-type:     Simple

source-repository head
  type: git
  location: https://github.com/blueripple/data-overlaps

library
  exposed-modules: BlueRipple.Data.DistrictOverlaps
  hs-source-dirs: src
  ghc-options: -Wall -O2 -fno-warn-unused-top-binds -funbox-strict-fields
  build-depends:
      blueripple-data-ACS-Tables
    , blueripple-data-DRA
    , blueripple-small-data-sets
    , blueripple-data-loading
    , blueripple-data-types
    , aeson >= 2.1 && < 2.3
    , cassava >= 0.5.3 && < 0.6
    , clock >= 0.8 && < 0.9
    , Frames >= 0.7 && < 0.8
    , Frames-map-reduce >= 0.4.1.2 && < 0.5
    , Frames-utils >= 0.3.1
    , Frames-streamly >= 0.2
    , Frames-serialize >= 0.1.0
    , flat >= 0.5 && < 0.7
    , base >=4.12.0 && <5
    , bytestring >= 0.11.0.0 && < 0.13
    , containers >=0.5.0 && <0.9
    , directory >=1.3.3.0 && <1.4.0.0
    , exceptions >=0.10.4 && <0.11
    , foldl >= 1.4 && < 1.5
    , knit-haskell >= 0.8 && < 0.11
    , lens >= 5.2 && < 5.5
    , mtl >= 2.2 && < 2.4
    , pandoc >=2.9
    , pipes >= 4.2 && < 4.4
    , polysemy >=1.2 && < 1.10
    , polysemy-plugin >= 0.4.5
    , relude >= 1.0.0 && < 1.3
    , text >=1.2.3 && < 2.2
    , th-env >= 0.1.1 && < 0.2
    , time >= 1.8 && < 1.20
    , unordered-containers >= 0.2.20 && < 0.3
    , vector >= 0.13 && < 0.14
    , vinyl >= 0.13 && < 0.15
    , streamly >=0.9 && <0.13
    , streamly-core >=0.1.0 && <0.5

  mixins:  base hiding (Prelude)
         , relude (Relude as Prelude
         , Relude.Extra)
  default-language: Haskell2010
